# agents

./: .gitignore  .gitmodules  .skill-lock.json  README.md
mcp/: AGENTS.md
mcp/google-drive-mcp/: README.md  pyproject.toml
mcp/google-drive-mcp/src/google_drive_mcp/: server.py
mcp/google-drive-mcp/src/google_drive_mcp.egg-info/: PKG-INFO  entry_points.txt  requires.txt  top_level.txt
mcp/google-drive-mcp/src/google_drive_mcp/auth/: oauth.py
mcp/google-drive-mcp/src/google_drive_mcp/services/: google_docs.py
mcp/google-drive-mcp/src/google_drive_mcp/tools/: google_docs.py
mcp/jira-mcp/: README.md  package-lock.json  package.json  pyproject.toml
mcp/jira-mcp/src/: function.ts
mcp/jira-mcp/src/common/: config.ts  logger.ts
mcp/jira-mcp/src/jira_mcp/: __init__.py  config.py  server.py
mcp/jira-mcp/src/jira_mcp.egg-info/: PKG-INFO  entry_points.txt  requires.txt  top_level.txt
mcp/jira-mcp/src/jira_mcp/services/: process_issue_summary.py  process_my_timelogs.py  summarize_jira_issue.py
mcp/jira-mcp/src/jira_mcp/tools/: jira.py
mcp/jira-mcp/src/services/: index.ts  jiraApiClient.ts  processIssueSummary.ts  processMyTimelogs.ts  summarizeJiraIssue.ts
mcp/jira-mcp/src/types/: index.ts
mcp/jira-mcp/tests/: test_jira_comments_handling.py
mcp/jira-mcp/tests/fixtures/: sunnyr_65_sanitized.json  swisssp_168_sanitized.json
mcp/mcp-google-drive/: .gitignore  README.md  pyproject.toml
mcp/mcp-google-drive/src/google_drive_mcp/: __init__.py  config.py  server.py
mcp/mcp-google-drive/src/google_drive_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
mcp/mcp-google-drive/src/google_drive_mcp/auth/: __init__.py  cli.py  oauth.py
mcp/mcp-google-drive/tests/: test_google_calendar.py  test_google_calendar_tools.py  test_tools_registration.py
(+96 files in other folders)
