[project]
name = "google-drive-mcp"
version = "0.1.0"
description = "MCP server for Google Drive document workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]>=1.2.0",
  "google-auth>=2.35.0",
  "google-auth-oauthlib>=1.2.1",
  "httpx>=0.27.2"
]

[project.scripts]
google-drive-mcp = "google_drive_mcp.server:main"
google-drive-mcp-auth = "google_drive_mcp.auth.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
