[project]
name = "jira-mcp"
version = "0.1.0"
description = "MCP server that provides Jira tools for pull request workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]>=1.2.0",
  "httpx>=0.27.2",
  "openai>=1.51.0"
]

[project.scripts]
jira-mcp = "jira_mcp.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
